# telegram-jitsi-meet

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: docker-ci.yml
src/: main.py
src/telegram_jitsi_meet/: main.py
